feat: Hide stop, resume button to toggle

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div>
         <button class="btn-lap">Lap</button>
         <button class="btn-start">Start</button>
-        <button class="btn-stop">Stop</button>
-        <button class="btn-resume">Resume</button>
+        <button class="btn-stop displayNone">Stop</button>
+        <button class="btn-resume displayNone">Resume</button>
         <button class="btn-reset">Reset</button>
       </div>
     </div>
